# teleconference_project

./: .env  .flutter-plugins  .flutter-plugins-dependencies  .gitignore  ARCHITECTURE.md  CHECKPOINT.md  Cargo.toml  DEVELOPMENT_ROADMAP.md  README.md  SETUP_GUIDE.md  TESTING_GUIDE.md  audio_service.dart  build.rs  control_panel.dart  ffi.rs  lib.rs  main.dart  main.rs  participant_view.dart  pubspec.yaml  speech_service.dart  subtitle_display.dart
.cargo/: config.toml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/teleconference_app/: MainActivity.kt
core_api/: message.rs  mod.rs  teleconference.rs  teleconference_impl.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: audio_controls.dart  audio_controls_screen.dart  audio_test.dart  ffi.dart  main.dart  main_app.dart  main_test.dart  simple_test.dart
lib/models/: participant.dart  room.dart
lib/screens/: conference_screen.dart  device_settings_screen.dart  home_screen.dart  platform_info_screen.dart  raspberry_pi_setup_screen.dart
lib/services/: audio_service.dart  config_service.dart  platform_service.dart  simple_test.dart  webrtc_service.dart
lib/widgets/: chat_panel.dart  control_panel.dart  meeting_settings_dialog.dart  platform_adaptive_ui.dart  screen_share_button.dart  share_room_dialog.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
server/: deploy_to_raspberry.sh  package.json  signaling_server.js
test/: widget_test.dart
web/: index.html  manifest.json
web_client/: index.html  main.js  style.css
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
