[package]
name = "teleconference-server"
version = "0.1.0"
edition = "2021"
authors = ["Teleconference Team"]
description = "Real-time teleconference server component"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[lib]
name = "teleconference_server"
path = "lib.rs"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
uuid = { version = "1.3", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
async-trait = "0.1"
webrtc = "0.7"
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
dotenv = "0.15"
flutter_rust_bridge = "1.77.0"
lazy_static = "1.4.0"